--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-s
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=120
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-line-wrap=words
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.useTraitBodyBracePlacement=NEW_LINE
-auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
-auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=true
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=tests/php-unit/php-unit--bootstrap.php
 auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=true
@@ -40,13 +40,15 @@ auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=vendor/phpunit/phpunit/phpunit
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=true
+auxiliary.org-netbeans-modules-php-wordpress.plugins=
+auxiliary.org-netbeans-modules-php-wordpress.themes=
+auxiliary.org-netbeans-modules-php-wordpress.wp-root=
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=vendor/phpunit/php-code-coverage/src/CodeCoverage/Report/HTML/Renderer/Template/js
 browser.reload.on.save=true
 code.analysis.excludes=
 file.reference.bank-holidays-tests=tests
 ignore.path=
-include.path=\
-    ${php.global.include.path}
+include.path=
 php.version=PHP_55
 project.license=mit
 source.encoding=UTF-8
