--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.7"
+        "phpunit/phpunit": ">=5.1",
+		"phpunit/php-code-coverage": "^3"
     },
     "autoload": {
         "classmap": [
