--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.1",
-		"phpunit/php-code-coverage": "^3"
+        "phpunit/phpunit": ">=5.3",
+        "phpunit/php-code-coverage": "^3.3.0"
     },
     "autoload": {
         "classmap": [
