--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.3",
-        "phpunit/php-code-coverage": "^3.3.0"
+        "phpunit/phpunit": ">=5.4",
+        "phpunit/php-code-coverage": ">=4.0"
     },
     "autoload": {
         "classmap": [
