--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,11 @@
         "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.6",
-        "phpunit/php-code-coverage": ">=4.0"
+        "dealerdirect/phpcodesniffer-composer-installer": "*",
+        "frenck/php-compatibility": "*",
+        "phpunit/phpunit": ">=5.7",
+        "phpunit/php-code-coverage": ">=4.0",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "classmap": [
