added a class mapping for dev environment as well

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
             "source/Romanian.php"
         ]
     },
+    "autoload-dev": {
+        "classmap": [
+            "source/Romanian.php"
+        ]
+    },
     "minimum-stability": "stable",
     "prefer-stable": true,
     "archive": {
