Netbeans project configuration update

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,8 +21,10 @@ auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=vendor/bin/phpunit.bat
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups=
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
-auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=true
-auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=true
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
+auxiliary.org-netbeans-modules-php-symfony2.appDir-path=source
+auxiliary.org-netbeans-modules-php-symfony2.enabled=false
 auxiliary.org-netbeans-modules-php-wordpress.plugins=
 auxiliary.org-netbeans-modules-php-wordpress.themes=
 auxiliary.org-netbeans-modules-php-wordpress.wp-root=
@@ -32,7 +34,7 @@ code.analysis.excludes=
 file.reference.bank-holidays-tests=tests
 ignore.path=
 include.path=
-php.version=PHP_56
+php.version=PHP_70
 project.license=mit
 source.encoding=UTF-8
 src.dir=.
