--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "~0.4",
-        "wimg/php-compatibility": "~8.1",
-        "phpunit/phpunit": "~6.5",
-        "phpunit/php-code-coverage": ">=4.0",
-        "squizlabs/php_codesniffer": "^2.2 || ^3.0.2"
+        "phpunit/phpunit": "^7.2",
+        "phpunit/php-code-coverage": "^6",
+        "squizlabs/php_codesniffer": "^3.3",
+        "wimg/php-compatibility": "~8.1"
     },
     "autoload": {
         "classmap": [
