some internal results now point to new folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 /nbproject/private/
+/results/
 /vendor/
 composer.lock
-tests/php-code-sniffer/
-tests/php-unit/coverage.html/
-tests/php-unit/coverage-clover.xml
-tests/php-unit/junit.xml
-tests/php-unit/testdox.html
-tests/php-unit/testdox.txt
