--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,7 @@
     "require": {
         "php": "^5.6 || ^7.2"
     },
-    "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "~0.4",
-        "phpunit/phpunit": "^7.2",
-        "phpunit/php-code-coverage": "^6",
-        "squizlabs/php_codesniffer": "^3.3",
-        "wimg/php-compatibility": "~8.1"
-    },
     "autoload": {
-        "classmap": [
-            "source/Romanian.php"
-        ]
-    },
-    "autoload-dev": {
         "classmap": [
             "source/Romanian.php"
         ]
@@ -33,6 +21,10 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "archive": {
-        "exclude": ["/nbproject", "/vendor", "/tests"]
+        "exclude": [
+            "/nbproject", 
+            "/vendor", 
+            "/tests"
+        ]
     }
 }
