--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "danielgp/bank-holidays",
-    "description": "Usefull functions to return list of all bank holidays per year and month plus working days in month",
+    "description": "Useful functions to return list of all bank holidays per year and month plus working days in month",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,9 +11,12 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.2"
+        "php": "^5.6 || ^7.2 || ^7.3 || ^7.4 || ^8.0"
     },
     "autoload": {
+        "psr-4": {
+            "": "source/"
+        },
         "classmap": [
             "source/Romanian.php"
         ]
